# atomate2_ffforge

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  environment.yml  pyproject.toml
atomate2_ffforge/: __init__.py
atomate2_ffforge/dft/: queue_policies.py  vasp_singlept_maker.py
atomate2_ffforge/launch/: local.yaml  slurm.yaml
atomate2_ffforge/sampling/: birch.py  pca.py
sampling/: direct_sampler.py  encoders.py  stratified.py
tests/dft/: test_vasp_singlept.py
tests/sampling/: test_direct.py
